manifests/paperless-ngx/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: jovian-prod
  labels:
    app: paperless
    service: paperless
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: paperless
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless
    spec:
      nodeSelector:
        connection: standard
      containers:
      - name: ngx-redis
        image: docker.io/library/redis:8
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
          name: paper-redis
          protocol: TCP
        volumeMounts:
        - name: paperless-config
          mountPath: /data
          subPath: redis
        resources:
          requests:
            memory: "25Mi"
            cpu: "15m"
          limits:
            memory: "50Mi"
            cpu: "30m"

      - name: ngx-postgres
        image: docker.io/library/postgres:18
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          name: paper-db
          protocol: TCP
        volumeMounts:
        - name: paperless-config
          mountPath: /var/lib/postgresql
          subPath: postgres
        resources:
          requests:
            memory: "75Mi"
            cpu: "50m"
          limits:
            memory: "150Mi"
            cpu: "100m"

      - name: ngx-webserver
        image: ghcr.io/paperless-ngx/paperless-ngx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: paper-http
          protocol: TCP
        volumeMounts:
        - name: paperless-config
          mountPath: /usr/src/paperless/data
          subPath: data
        - name: paperless-config
          mountPath: /usr/src/paperless/media
          subPath: media
        - name: paperless-config
          mountPath: /usr/src/paperless/export
          subPath: export
        - name: paperless-config
          mountPath: /usr/src/paperless/consume
          subPath: consume
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"

      - name: ngx-gotenberg
        image: docker.io/gotenberg/gotenberg:8.25
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: paper-gotenberg
          protocol: TCP
        args:
          - "gotenberg"
          - "--chromium-disable-javascript=true"
          - "--chromium-allow-list=file:///tmp/.*"
        resources:
          requests:
            memory: "250Mi"
            cpu: "50m"

      - name: ngx-tika
        image: docker.io/apache/tika:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9998
          name: paper-tika
          protocol: TCP
        resources:
          requests:
            memory: "200Mi"
            cpu: "50m"

      volumes:
      - name: paperless-config
        persistentVolumeClaim:
          claimName: paperless-pvc
          readOnly: false
